# job-app

./: .env.compose.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
agents/: .env.example  AGENTS.md  Dockerfile  assembly.py  experience_contract.py  generation.py  pyproject.toml  resume_judge.py  validation.py  worker.py
agents/tests/: test_assembly.py  test_experience_contract.py  test_generation_pipeline.py  test_resume_judge.py  test_worker.py
backend/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  applications.py  base_resumes.py  extension.py  internal_worker.py  notifications.py  profiles.py  public_invites.py  session.py
backend/app/core/: access.py  auth.py  config.py  security.py  workflow_contract.py
backend/app/db/: admin.py  applications.py  base_resumes.py  notifications.py  profiles.py
backend/app/services/: admin.py  application_manager.py  base_resumes.py  duplicates.py  email.py  jobs.py  pdf_export.py  progress.py  resume_parser.py  resume_privacy.py  supabase_admin.py  workflow.py
backend/tests/: test_admin_api.py  test_admin_service.py  test_auth.py  test_config.py  test_email.py  test_extension_api.py  test_notifications_api.py  test_pdf_export.py  test_phase1_applications.py  test_profiles_api.py  test_public_invites_api.py  test_resume_parser.py  test_session_bootstrap.py  test_workflow_contract.py
docs/: backend-database-migration-runbook.md  build-plan.md  database_schema.md  prompts.md  resume_builder_PRD_v3.md  todo.md
frontend/: .env.example  (+9 more)
(+124 files in other folders)
